<resources>
    <string name="app_name">screening test 1</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="nama_anda">masukan nama anda</string>
    <string name="next">Next</string>
    <string name="name">Nama: %1$s</string>
    <string name="pilih_event">pilih event</string>
    <string name="pilih_guest">pilih guest</string>
    <string name="event">Event</string>
    <string name="guest">Guest</string>
    <string name="event_image">event image</string>
    <string name="image_guest">image guest</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="image_message">Sertakan Gambar Profile anda untuk Melengkapi Profile</string>
    <string name="search_event">search event</string>
    <string name="new_media_event">new media</string>
    <string name="please_wait">please wait</string>
    <string name="icon_map">icon map</string>
</resources>